<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ShoppingCart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="purchase_online">PURCHASE ONLINE</string>
    <string name="track_your_order">TRACK YOUR ORDER</string>
    <string name="get_your_order">GET YOUR ORDER</string>
    <string name="password">Password</string>
    <string name="enter_email">enter email</string>
    <string name="email_id">Email id</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="i_don_t_have_an_account">I DON\'T HAVE AN ACCOUNT</string>
    <string name="enter_password">enter password</string>
    <string name="login">LOGIN</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">enter full name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="register">REGISTER</string>
    <string name="i_have_an_account">I HAVE AN ACCOUNT</string>
    <string name="phones">phones</string>
    <string name="phone">Phone</string>
    <string name="description">description</string>
    <string name="price">price</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="specifications">Specifications</string>
    <string name="UserReviews">User Reviews</string>
    <string name="model_name">model name</string>
    <string name="real_me">real me</string>
    <string name="comment">Comment</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="_7038264893">7038264893</string>
    <string name="pavani_gmail_com">pavani@gmail.com</string>
    <string name="Pavani">Pavani</string>
    <string name="super_cart">SuperCart</string>
    <string name="remember_me">Remember me \t</string>
    <string name="select_delivery_address">Select delivery address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="internet_banking">Internet Banking</string>
    <string name="search">search</string>
    <string name="tab">tab</string>
    <string name="address_title">Address Title</string>
    <string name="enter_address_title">enter address title</string>
    <string name="address">Address</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="get_started">GET STARTED</string>
    <string name="total_bill_amount">Total Bill Amount</string>
    <string name="checkout">CHECKOUT</string>
    <string name="_640">$ 640</string>
    <string name="next">NEXT</string>
    <string name="add_address">ADD ADDRESS</string>
    <string name="order_id">Order ID</string>
    <string name="_3246">#3246</string>
    <string name="order_status">Order Status</string>
    <string name="confirmed">Confirmed</string>
    <string name="purchase_items">Purchase Items</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="virginia_herndon">virginia herndon</string>
    <string name="payment_option">Payment Option</string>
    <string name="cancel_order">CANCEL ORDER</string>
    <string name="select_payment_option">Select Payment Option</string>
    <string name="tcash_on_delivery">\tCash On Delivery</string>
    <string name="tinternet_banking">\tInternet Banking</string>
    <string name="tdebit_card_credit_card">\tDebit Card/Credit Card</string>
    <string name="tpay_pal">\tPay Pal</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="cart_items">Cart Items</string>
    <string name="confirm_and_place_order">CONFIRM AND PLACE ORDER</string>
    <string name="_450">450</string>
    <string name="unit_price">unit price</string>
    <string name="quantity">quantity</string>
    <string name="amount">Amount</string>
    <string name="_1">1</string>
    <string name="_100">100</string>
    <string name="cod">COD</string>
    <string name="date">date</string>
    <string name="night_theme">Night theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="delivery">Delivery</string>
    <string name="payment">Payment</string>
    <string name="summary">Summary</string>
</resources>