<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_24dp"
    android:padding="@dimen/_16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.cart.AddressFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_Address"
        android:text="@string/add_new_address"
        style="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_AddressTitle"
        android:text="@string/address_title"
        android:textColor="@color/black"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="@dimen/_24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_Address"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_addressTitleInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/blue"
        app:boxCornerRadiusTopEnd="@dimen/_8dp"
        app:boxCornerRadiusBottomStart="@dimen/_8dp"
        app:boxCornerRadiusTopStart="@dimen/_8dp"
        app:boxCornerRadiusBottomEnd="@dimen/_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_AddressTitle"
        style ="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="@dimen/_8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_titleAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:hint="@string/enter_address_title"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_AddressBodyText"
        android:text="@string/address"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="@dimen/_8dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_addressTitleInputField"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_addressInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/blue"
        app:boxCornerRadiusTopEnd="@dimen/_8dp"
        app:boxCornerRadiusBottomStart="@dimen/_8dp"
        app:boxCornerRadiusTopStart="@dimen/_8dp"
        app:boxCornerRadiusBottomEnd="@dimen/_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_AddressBodyText"
        style ="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="@dimen/_8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_titleBody"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:hint="@string/enter_address_title"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_45dp"
        android:layout_marginStart="@dimen/_8dp"
        app:layout_constraintTop_toBottomOf="@id/et_addressInputField"
        android:backgroundTint="@color/blue"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:text="@string/save"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_45dp"
        android:layout_marginStart="@dimen/_8dp"
        app:layout_constraintTop_toBottomOf="@id/et_addressInputField"
        android:backgroundTint="@color/blue"/>

</androidx.constraintlayout.widget.ConstraintLayout>