<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/_16dp"
    android:padding="@dimen/_8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.cart.ViewProductsFragment">

    <TextView
        android:id = "@+id/tv_totalBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_bill_amount"
        android:textColor="@color/black"
        style="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_640"
        android:textColor="@color/orange"
        style="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cartItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_totalPrice"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/PrimaryButton"
        android:background="@drawable/button_bg"
        android:layout_marginBottom="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>