<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rectangle_shape"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginBottom="@dimen/_8dp"
    android:padding="@dimen/_16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:text="@string/phone"/>

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/rating_bar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="true"
        android:layout_marginTop="@dimen/_4dp"
        android:numStars="5"
        android:rating="4"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/user_comment"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:textColor="@color/orange"
        android:layout_marginTop="@dimen/_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/person_name"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/user_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_comment"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="@dimen/_8dp"
        android:textColor="@color/black"
        android:text="@string/description"/>





</androidx.constraintlayout.widget.ConstraintLayout>