<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#FFFFFF"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.subCategory.ProductDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16dp"
        android:layout_marginVertical="@dimen/_16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/productD_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            style="@style/TextAppearance.AppCompat.Large"
            android:textColor="#8F523F"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:numStars="5"
            android:rating="4"
            style="@style/Widget.AppCompat.RatingBar.Small"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/productD_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productD_name"
            android:text="@string/description"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_8dp"
            style="@style/TextAppearance.AppCompat.Medium"
            />
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerImage"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300dp"
            android:layout_marginTop="@dimen/_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productD_description"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/productD_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/price"
            android:layout_marginTop="@dimen/_16dp"
            style="@style/TextAppearance.AppCompat.Large"
            android:textColor="#8F523F"
            app:layout_constraintTop_toBottomOf="@id/viewPagerImage"/>

        <TextView
            android:id="@+id/addToCart"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:enabled="true"
            android:textColor="@color/blue"
            android:clickable="true"
            android:layout_marginTop="@dimen/_16dp"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/productD_price"
            app:layout_constraintTop_toBottomOf="@id/viewPagerImage" />
        <com.training.shopcartecom.view.QuantityStepper
            android:id="@+id/quantity_stepper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:background="@drawable/quantity_stepper_bg"
            android:visibility="gone"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_16dp"
            app:layout_constraintStart_toEndOf="@+id/productD_price"
            app:layout_constraintTop_toBottomOf="@id/viewPagerImage"
            />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/productD_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_16dp"
            android:background="@color/light_grey"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_specification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/specifications"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_8dp"
            style="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toBottomOf="@id/divider"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_specifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_shape"
            app:layout_constraintStart_toStartOf="parent"
            tools:itemCount="0"
            android:layout_marginTop="@dimen/_8dp"
            app:layout_constraintTop_toBottomOf="@id/text_specification"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/UserReviews"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_8dp"
            style="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toBottomOf="@id/rv_specifications"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            tools:itemCount="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_reviews"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginBottom="@dimen/_16dp"
            app:layout_constraintTop_toBottomOf="@id/text_reviews"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>